Segundo commit de prueba

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     
-    <img width="100%" src="https://contenidos2.sanlorenzo.com.ar/img/info/marca-aplicacion-hz-3.png" alt="">
+    <!-- <img width="100%" src="https://contenidos2.sanlorenzo.com.ar/img/info/marca-aplicacion-hz-3.png" alt=""> -->
+    <img src="img/max-verstappen-red-bull-racing.jpg" alt="" width="100%">
 </body>
 </html>
