--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E-Commerce</title>
+    <link rel="icon" href="/img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-    
-    <!-- <img width="100%" src="https://contenidos2.sanlorenzo.com.ar/img/info/marca-aplicacion-hz-3.png" alt=""> -->
-    <img src="img/max-verstappen-red-bull-racing.jpg" alt="" width="100%">
+    <!-- Header con navegación -->
+    <header>
+        <div class="header-content">
+            <div class="logo">E-Commerce</div>
+            <nav>
+                <ul>
+                    <li><a href="#start">Inicio</a></li>
+                    <li><a href="#servicios">Servicios</a></li>
+                    <li><a href="#about">Acerca</a></li>
+                    <li><a href="#cart"><img src="/img/cart.png" alt="shopping cart" ></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
