--- a/index.html
+++ b/index.html
@@ -22,5 +22,14 @@
             </nav>
         </div>
     </header>
+
+    <!-- Contenido principal -->
+    <!-- Footer -->
+    <footer id="contacto">
+        <p>&copy; 2025 ISTEA - Programación Web.</p>
+        <p>
+            📧 jmgomezn8@gmail.com 
+        </p>
+    </footer>
 </body>
 </html>
