--- a/index.html
+++ b/index.html
@@ -15,17 +15,26 @@
             <nav>
                 <ul>
                     <li><a href="#start">Inicio</a></li>
-                    <li><a href="#servicios">Servicios</a></li>
-                    <li><a href="#about">Acerca</a></li>
-                    <li><a href="#cart"><img src="/img/cart.png" alt="shopping cart" ></li>
+                    <li><a href="#products">Productos</a></li>
+                    <li><a href="#contact">Contacto</a></li>
+                    <li><a href="#cart"><img src="/img/cart.png" alt="shopping cart" ></a></li>
                 </ul>
             </nav>
         </div>
     </header>
-
     <!-- Contenido principal -->
+     <main class="container">
+        <!-- Prop -->
+        <section class="prop" id="start">
+            <h1>HASTA 18 CUOTAS SIN INTERÉS</h1>
+            <p>EN PRODUCTOS EXCLUSIVOS</p>
+            <a href="#products" class="btn-prop">Ver Productos</a>
+        </section>
+
+        
+     </main>
     <!-- Footer -->
-    <footer id="contacto">
+    <footer id="contact">
         <p>&copy; 2025 ISTEA - Programación Web.</p>
         <p>
             📧 jmgomezn8@gmail.com 
