--- a/index.html
+++ b/index.html
@@ -31,7 +31,43 @@
             <a href="#products" class="btn-prop">Ver Productos</a>
         </section>
 
-        
+        <!-- Cards -->
+         <section id="products">
+            <h2 class="text-center" style="margin-bottom: 2rem; color: var(--primary-color); font-size: clamp(1.8rem, 4vw, 2.5rem);">Nuestros Productos</h2>
+            
+            <div class="cards-grid">
+                <div class="card">
+                    <a href="#product-page" target="_blank" ><img src="/img/celular.jpg"></a>
+                    <h3>Celular Motorola G05 4GB 128GB</h3>
+                    <h3>$158.000.-</h3>
+                </div>
+                <div class="card">
+                    <a href="#product-page" target="_blank" ><img src="/img/auriculares.jpg"></a>
+                    <h3>Auriculares Inalámbricos Blackpoint</h3>
+                    <h3>$58.000.-</h3>
+                </div>
+                <div class="card">
+                    <a href="#product-page" target="_blank" ><img src="/img/freidora.jpg"></a>
+                    <h3>Freidora de Aire Atma</h3>
+                    <h3>$258.000.-</h3>
+                </div>
+                <div class="card">
+                    <a href="#product-page" target="_blank" ><img src="/img/lavarropas.jpg"></a>
+                    <h3>Lavarropas Automático Philco</h3>
+                    <h3>$550.000.-</h3>
+                </div>
+                <div class="card">
+                    <a href="#product-page" target="_blank" ><img src="/img/notebook.jpg"></a>
+                    <h3>Notebook Celeron 14.1" 4GB 128 GB SSD Philco</h3>
+                    <h3>$1.258.000.-</h3>
+                </div>
+                <div class="card">
+                    <a href="#product-page" target="_blank" ><img src="/img/play.jpg"></a>
+                    <h3>Play station 5</h3>
+                    <h3>$1.600.000.-</h3>
+                </div>
+            </div>
+        </section>
      </main>
     <!-- Footer -->
     <footer id="contact">
