--- a/index.html
+++ b/index.html
@@ -37,34 +37,34 @@
             
             <div class="cards-grid">
                 <div class="card">
-                    <a href="#product-page" target="_blank" ><img src="/img/celular.jpg"></a>
+                    <a href="/product.html" target="" ><img src="/img/celular.jpg"></a>
                     <h3>Celular Motorola G05 4GB 128GB</h3>
-                    <h3>$158.000.-</h3>
+                    <p class="price">$158.000.-</p>
                 </div>
                 <div class="card">
                     <a href="#product-page" target="_blank" ><img src="/img/auriculares.jpg"></a>
                     <h3>Auriculares Inalámbricos Blackpoint</h3>
-                    <h3>$58.000.-</h3>
+                    <p class="price">$58.000.-</p>
                 </div>
                 <div class="card">
                     <a href="#product-page" target="_blank" ><img src="/img/freidora.jpg"></a>
                     <h3>Freidora de Aire Atma</h3>
-                    <h3>$258.000.-</h3>
+                    <p class="price">$258.000.-</p>
                 </div>
                 <div class="card">
                     <a href="#product-page" target="_blank" ><img src="/img/lavarropas.jpg"></a>
                     <h3>Lavarropas Automático Philco</h3>
-                    <h3>$550.000.-</h3>
+                    <p class="price">$550.000.-</p>
                 </div>
                 <div class="card">
                     <a href="#product-page" target="_blank" ><img src="/img/notebook.jpg"></a>
                     <h3>Notebook Celeron 14.1" 4GB 128 GB SSD Philco</h3>
-                    <h3>$1.258.000.-</h3>
+                    <p class="price">$1.258.000.-</p>
                 </div>
                 <div class="card">
                     <a href="#product-page" target="_blank" ><img src="/img/play.jpg"></a>
                     <h3>Play station 5</h3>
-                    <h3>$1.600.000.-</h3>
+                    <p class="price">$1.600.000.-</p>
                 </div>
             </div>
         </section>
