product page responsive

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#start">Inicio</a></li>
                     <li><a href="#products">Productos</a></li>
                     <li><a href="#contact">Contacto</a></li>
-                    <li><a href="#cart"><img src="/img/cart.png" alt="shopping cart" ></a></li>
+                    <li><a href="/cart.html"><img src="/img/cart.png" alt="shopping cart" ></a></li>
                 </ul>
             </nav>
         </div>
@@ -37,17 +37,17 @@
             
             <div class="cards-grid">
                 <div class="card">
-                    <a href="/product.html" target="" ><img src="/img/celular.jpg"></a>
+                    <a href="/product.html"  ><img src="/img/celular.jpg"></a>
                     <h3>Celular Motorola G05 4GB 128GB</h3>
                     <p class="price">$158.000.-</p>
                 </div>
                 <div class="card">
-                    <a href="#product-page" target="_blank" ><img src="/img/auriculares.jpg"></a>
+                    <a href="#product-page" ><img src="/img/auriculares.jpg"></a>
                     <h3>Auriculares Inalámbricos Blackpoint</h3>
                     <p class="price">$58.000.-</p>
                 </div>
                 <div class="card">
-                    <a href="#product-page" target="_blank" ><img src="/img/freidora.jpg"></a>
+                    <a href="#product-page"  ><img src="/img/freidora.jpg"></a>
                     <h3>Freidora de Aire Atma</h3>
                     <p class="price">$258.000.-</p>
                 </div>
@@ -57,12 +57,12 @@
                     <p class="price">$550.000.-</p>
                 </div>
                 <div class="card">
-                    <a href="#product-page" target="_blank" ><img src="/img/notebook.jpg"></a>
+                    <a href="#product-page" ><img src="/img/notebook.jpg"></a>
                     <h3>Notebook Celeron 14.1" 4GB 128 GB SSD Philco</h3>
                     <p class="price">$1.258.000.-</p>
                 </div>
                 <div class="card">
-                    <a href="#product-page" target="_blank" ><img src="/img/play.jpg"></a>
+                    <a href="#product-page"  ><img src="/img/play.jpg"></a>
                     <h3>Play station 5</h3>
                     <p class="price">$1.600.000.-</p>
                 </div>
