--- a/cart.html
+++ b/cart.html
@@ -17,20 +17,18 @@
                     <li><a href="/index.html">Inicio</a></li>
                     <li><a href="/index.html">Productos</a></li>
                     <li><a href="#contact">Contacto</a></li>
-                    <li><a href="/cart.html"><img src="/img/cart.png" alt="shopping cart" ></a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <!-- Contenido principal -->
      <main class="container">
-        <section class="cart" id="start">
+        <section class="cart">
             <div class="cart-items">
                 <div class="cart-item">
                     <img src="/img/celular.jpg" alt="Celular Motorola G05 4GB 128GB">
-                    <div class="item-info">
-                        <h2>Celular Motorola G05 4GB 128GB</h2>
-                    </div>
+                    <div class="item-info">Celular Motorola G05 4GB 128GB</div>
+                    <div class="item-price">$ 158.000.-</div>
                 </div>
                 <div class="cart-item-quantity">
                     <div class="btn-cart-add">+</div>
@@ -40,9 +38,9 @@
             </div>
             
             <div class="cart-total">
-                <h3>Subtotal (1 producto): $158.000.-</h3>
-                <h3>Envío: $3.500.-</h3>
-                <h2>Total: $161.500.-</h2>  
+                <div class="cart-total-sub"><span>Subtotal:</span> <span>$ 158.000.-</span></div>
+                <div class="cart-total-ship"><span>Envío:</span> <span>$ 3.000.-</span></div>
+                <div class="cart-total-sum"><span>Total:</span> <span>$ 161.000.-</span></div>
             </div>
         <!-- Botones -->
             <a href="#products" class="btn-cart-back">Seguir comprando</a>
