--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-    <!-- Header con navegación -->
+    <!-- Header  -->
     <header>
         <div class="header-content">
             <div class="logo">E-Commerce</div>
-            <nav>
+            <img class="hamburguer" src="/img/menu.png">
+            <nav class="header-content-nav">
                 <ul>
                     <li><a href="#start">Inicio</a></li>
                     <li><a href="#products">Productos</a></li>
@@ -33,38 +34,43 @@
 
         <!-- Cards -->
          <section id="products">
-            <h2 class="text-center" style="margin-bottom: 2rem; color: var(--primary-color); font-size: clamp(1.8rem, 4vw, 2.5rem);">Nuestros Productos</h2>
             
-            <div class="cards-grid">
-                <div class="card">
-                    <a href="/product.html"  ><img src="/img/celular.jpg"></a>
-                    <h3>Celular Motorola G05 4GB 128GB</h3>
-                    <p class="price">$158.000.-</p>
+            <div class="products-cards-grid">
+                <div class="product-card">
+                    <img src="/img/celular.jpg">
+                    <div class="product-card-name">Celular Motorola G05 4GB 128GB</div>
+                    <div class="product-card-price">$158.000.-</div>
+                    <a href="/product.html" class="product-card-btn">Ver Producto</a>
                 </div>
-                <div class="card">
-                    <a href="#product-page" ><img src="/img/auriculares.jpg"></a>
-                    <h3>Auriculares Inalámbricos Blackpoint</h3>
-                    <p class="price">$58.000.-</p>
+                <div class="product-card">
+                    <img src="/img/auriculares.jpg">
+                    <div class="product-card-name">Auriculares Inalámbricos Blackpoint</div>
+                    <div class="product-card-price">$58.000.-</div>
+                    <a href="/product.html" class="product-card-btn">Ver Producto</a>
                 </div>
-                <div class="card">
-                    <a href="#product-page"  ><img src="/img/freidora.jpg"></a>
-                    <h3>Freidora de Aire Atma</h3>
-                    <p class="price">$258.000.-</p>
+                <div class="product-card">
+                    <img src="/img/freidora.jpg">
+                    <div class="product-card-name">Freidora de Aire Atma</div>
+                    <div class="product-card-price">$258.000.-</div>
+                    <a href="/product.html" class="product-card-btn">Ver Producto</a>
                 </div>
-                <div class="card">
-                    <a href="#product-page" target="_blank" ><img src="/img/lavarropas.jpg"></a>
-                    <h3>Lavarropas Automático Philco</h3>
-                    <p class="price">$550.000.-</p>
+                <div class="product-card">
+                    <img src="/img/lavarropas.jpg">
+                    <div class="product-card-name">Lavarropas Automático Philco</div>
+                    <div class="product-card-price">$550.000.-</div>
+                    <a href="/product.html" class="product-card-btn">Ver Producto</a>
                 </div>
-                <div class="card">
-                    <a href="#product-page" ><img src="/img/notebook.jpg"></a>
-                    <h3>Notebook Celeron 14.1" 4GB 128 GB SSD Philco</h3>
-                    <p class="price">$1.258.000.-</p>
+                <div class="product-card">
+                    <img src="/img/notebook.jpg">
+                    <div class="product-card-name">Notebook Celeron 14.1" 4GB 128 GB SSD Philco</div>
+                    <div class="product-card-price">$1.258.000.-</div>
+                    <a href="/product.html" class="product-card-btn">Ver Producto</a>
                 </div>
-                <div class="card">
-                    <a href="#product-page"  ><img src="/img/play.jpg"></a>
-                    <h3>Play station 5</h3>
-                    <p class="price">$1.600.000.-</p>
+                <div class="product-card">
+                    <img src="/img/play.jpg">
+                    <div class="product-card-name">Play station 5</div>
+                    <div class="product-card-price">$1.600.000.-</div>
+                    <a href="/product.html" class="product-card-btn">Ver Producto</a>
                 </div>
             </div>
         </section>
