--- a/cart.html
+++ b/cart.html
@@ -8,15 +8,17 @@
     <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-    <!-- Header con navegación -->
+    <!-- Header -->
     <header>
         <div class="header-content">
             <div class="logo">E-Commerce</div>
-            <nav>
+            <img class="hamburguer" src="/img/menu.png">
+            <nav class="header-content-nav">
                 <ul>
-                    <li><a href="/index.html">Inicio</a></li>
-                    <li><a href="/index.html">Productos</a></li>
+                    <li><a href="#start">Inicio</a></li>
+                    <li><a href="#products">Productos</a></li>
                     <li><a href="#contact">Contacto</a></li>
+                    <li><a href="/cart.html"><img src="/img/cart.png" alt="shopping cart" ></a></li>
                 </ul>
             </nav>
         </div>
@@ -26,7 +28,7 @@
         <section class="cart">
             <div class="cart-items">
                 <div class="cart-item">
-                    <img src="/img/celular.jpg" alt="Celular Motorola G05 4GB 128GB">
+                    <img src="/img/celular.jpg">
                     <div class="item-info">Celular Motorola G05 4GB 128GB</div>
                     <div class="item-price">$ 158.000.-</div>
                 </div>
