--- a/product.html
+++ b/product.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-    <!-- Header con navegación -->
+    <!-- Header  -->
     <header>
         <div class="header-content">
             <div class="logo">E-Commerce</div>
-            <nav>
+            <img class="hamburguer" src="/img/menu.png">
+            <nav class="header-content-nav">
                 <ul>
-                    <li><a href="/index.html">Inicio</a></li>
-                    <li><a href="/index.html">Productos</a></li>
+                    <li><a href="#start">Inicio</a></li>
+                    <li><a href="#products">Productos</a></li>
                     <li><a href="#contact">Contacto</a></li>
                     <li><a href="/cart.html"><img src="/img/cart.png" alt="shopping cart" ></a></li>
                 </ul>
@@ -27,17 +28,15 @@
         <!-- Detalle del producto -->
         <section class="product-detail" >
             <div class="product-image">
-                <img src="/img/celular.jpg" alt="Celular Motorola G05 4GB 128GB">
+                <img src="/img/celular.jpg">
             </div>
             <div class="product-info">
-                <h1>Celular Motorola G05 4GB 128GB</h1>
-                <p class="price">$158.000.-</p>
-                <p class="description">Disfruta de un rendimiento excepcional con el Celular Motorola G05, que cuenta con 4GB de RAM y 128GB de almacenamiento interno. Perfecto para multitarea y almacenamiento de tus aplicaciones y archivos favoritos.</p>
-                <button class="btn-add-cart">Agregar al Carrito</button>
+                <div class="product-info-name">Celular Motorola G05 4GB 128GB</div>
+                <div class="product-info-price">$158.000.-</div>
+                <div class="product-info-description">Disfruta de un rendimiento excepcional con el Celular Motorola G05, que cuenta con 4GB de RAM y 128GB de almacenamiento interno. Perfecto para multitarea y almacenamiento de tus aplicaciones y archivos favoritos.</div>
             </div>
+            <a href="#products" class="btn-product-buy">Comprar</a>
         </section>
-        
-        
      </main>
     <!-- Footer -->
     <footer id="contact">
