--- a/cart.html
+++ b/cart.html
@@ -15,8 +15,8 @@
             <img class="hamburguer" src="/img/menu.png">
             <nav class="header-content-nav">
                 <ul>
-                    <li><a href="#start">Inicio</a></li>
-                    <li><a href="#products">Productos</a></li>
+                    <li><a href="/index.html">Inicio</a></li>
+                    <li><a href="/index.html">Productos</a></li>
                     <li><a href="#contact">Contacto</a></li>
                     <li><a href="/cart.html"><img src="/img/cart.png" alt="shopping cart" ></a></li>
                 </ul>
@@ -45,7 +45,7 @@
                 <div class="cart-total-sum"><span>Total:</span> <span>$ 161.000.-</span></div>
             </div>
         <!-- Botones -->
-            <a href="#products" class="btn-cart-back">Seguir comprando</a>
+            <a href="/index.html" class="btn-cart-back">Seguir comprando</a>
             <a href="#products" class="btn-cart-buy">Comprar</a>
         </section>
         <!-- Detalle del carrito -->
