--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img class="hamburguer" src="/img/menu.png">
             <nav class="header-content-nav">
                 <ul>
-                    <li><a href="#start">Inicio</a></li>
+                    <li><a href="/index.html">Inicio</a></li>
                     <li><a href="#products">Productos</a></li>
                     <li><a href="#contact">Contacto</a></li>
                     <li><a href="/cart.html"><img src="/img/cart.png" alt="shopping cart" ></a></li>
@@ -26,7 +26,7 @@
     <!-- Contenido principal -->
      <main class="container">
         <!-- Prop -->
-        <section class="prop" id="start">
+        <section class="prop">
             <h1>HASTA 18 CUOTAS SIN INTERÉS</h1>
             <p>EN PRODUCTOS EXCLUSIVOS</p>
             <a href="#products" class="btn-prop">Ver Productos</a>
