--- a/product.html
+++ b/product.html
@@ -15,7 +15,7 @@
             <img class="hamburguer" src="/img/menu.png">
             <nav class="header-content-nav">
                 <ul>
-                    <li><a href="#start">Inicio</a></li>
+                    <li><a href="/index.html">Inicio</a></li>
                     <li><a href="#products">Productos</a></li>
                     <li><a href="#contact">Contacto</a></li>
                     <li><a href="/cart.html"><img src="/img/cart.png" alt="shopping cart" ></a></li>
@@ -35,7 +35,7 @@
                 <div class="product-info-price">$158.000.-</div>
                 <div class="product-info-description">Disfruta de un rendimiento excepcional con el Celular Motorola G05, que cuenta con 4GB de RAM y 128GB de almacenamiento interno. Perfecto para multitarea y almacenamiento de tus aplicaciones y archivos favoritos.</div>
             </div>
-            <a href="#products" class="btn-product-buy">Comprar</a>
+            <a href="/cart.html" class="btn-product-buy">Agregar al carrito</a>
         </section>
      </main>
     <!-- Footer -->
