--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="/index.html">Inicio</a></li>
                     <li><a href="#products">Productos</a></li>
-                    <li><a href="#contact">Contacto</a></li>
+                    <li><a href="/contact.html">Contacto</a></li>
                     <li><a href="/cart.html"><img src="/img/cart.png" alt="shopping cart" ></a></li>
                 </ul>
             </nav>
@@ -39,7 +39,7 @@
         </section>
      </main>
     <!-- Footer -->
-    <footer id="contact">
+    <footer>
         <p>&copy; 2025 ISTEA - Programación Web.</p>
         <p>
             📧 jmgomezn8@gmail.com 
