--- a/cart.html
+++ b/cart.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="/index.html">Inicio</a></li>
                     <li><a href="/index.html">Productos</a></li>
-                    <li><a href="#contact">Contacto</a></li>
+                    <li><a href="/contact.html">Contacto</a></li>
                     <li><a href="/cart.html"><img src="/img/cart.png" alt="shopping cart" ></a></li>
                 </ul>
             </nav>
@@ -33,9 +33,9 @@
                     <div class="item-price">$ 158.000.-</div>
                 </div>
                 <div class="cart-item-quantity">
-                    <div class="btn-cart-add">+</div>
+                    <div class="btn-cart-add">-</div>
                     <div class="btn-cart-q">Cantidad: 1</div>
-                    <div class="btn-cart-del">-</div>
+                    <div class="btn-cart-del">+</div>
                 </div>
             </div>
             
@@ -52,7 +52,7 @@
 
      </main>
     <!-- Footer -->
-    <footer id="contact">
+    <footer>
         <p>&copy; 2025 ISTEA - Programación Web.</p>
         <p>
             📧 jmgomezn8@gmail.com 
