--- a/product.html
+++ b/product.html
@@ -16,7 +16,7 @@
             <nav class="header-content-nav">
                 <ul>
                     <li><a href="/index.html">Inicio</a></li>
-                    <li><a href="#products">Productos</a></li>
+                    <li><a href="/index.html">Productos</a></li>
                     <li><a href="/contact.html">Contacto</a></li>
                     <li><a href="/cart.html"><img src="/img/cart.png" alt="shopping cart" ></a></li>
                 </ul>
