--- a/cart.html
+++ b/cart.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerce</title>
-    <link rel="icon" href="/img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <!-- Header -->
     <header>
         <div class="header-content">
             <div class="logo">E-Commerce</div>
-            <img class="hamburguer" src="/img/menu.png">
+            <img class="hamburguer" src="./img/menu.png">
             <nav class="header-content-nav">
                 <ul>
-                    <li><a href="/index.html">Inicio</a></li>
-                    <li><a href="/index.html">Productos</a></li>
-                    <li><a href="/contact.html">Contacto</a></li>
-                    <li><a href="/cart.html"><img src="/img/cart.png" alt="shopping cart" ></a></li>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="./index.html">Productos</a></li>
+                    <li><a href="./contact.html">Contacto</a></li>
+                    <li><a href="./cart.html"><img src="./img/cart.png" alt="shopping cart" ></a></li>
                 </ul>
             </nav>
         </div>
@@ -29,7 +29,7 @@
         <section class="cart">
             <div class="cart-items">
                 <div class="cart-item">
-                    <img src="/img/celular.jpg">
+                    <img src="./img/celular.jpg">
                     <div class="item-info">Celular Motorola G05 4GB 128GB</div>
                     <div class="item-price">$ 158.000.-</div>
                 </div>
@@ -46,7 +46,7 @@
                 <div class="cart-total-sum"><span>Total:</span> <span>$ 161.000.-</span></div>
             </div>
         <!-- Botones -->
-            <a href="/index.html" class="btn-cart-back">Seguir comprando</a>
+            <a href="./index.html" class="btn-cart-back">Seguir comprando</a>
             <a href="#products" class="btn-cart-buy">Comprar</a>
         </section>
         
