--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerce</title>
-    <link rel="icon" href="/img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <!-- Header  -->
     <header>
         <div class="header-content">
             <div class="logo">E-Commerce</div>
-            <img class="hamburguer" src="/img/menu.png">
+            <img class="hamburguer" src="./img/menu.png">
             <nav class="header-content-nav">
                 <ul>
-                    <li><a href="/index.html">Inicio</a></li>
+                    <li><a href="./index.html">Inicio</a></li>
                     <li><a href="#products">Productos</a></li>
-                    <li><a href="/contact.html">Contacto</a></li>
-                    <li><a href="/cart.html"><img src="/img/cart.png" alt="shopping cart" ></a></li>
+                    <li><a href="./contact.html">Contacto</a></li>
+                    <li><a href="./cart.html"><img src="./img/cart.png" alt="shopping cart" ></a></li>
                 </ul>
             </nav>
         </div>
@@ -37,40 +37,40 @@
             
             <div class="products-cards-grid">
                 <div class="product-card">
-                    <img src="/img/celular.jpg">
+                    <img src="./img/celular.jpg">
                     <div class="product-card-name">Celular Motorola G05 4GB 128GB</div>
                     <div class="product-card-price">$158.000.-</div>
-                    <a href="/product.html" class="product-card-btn">Ver Producto</a>
+                    <a href="./product.html" class="product-card-btn">Ver Producto</a>
                 </div>
                 <div class="product-card">
-                    <img src="/img/auriculares.jpg">
+                    <img src="./img/auriculares.jpg">
                     <div class="product-card-name">Auriculares Inalámbricos Blackpoint</div>
                     <div class="product-card-price">$58.000.-</div>
-                    <a href="/product.html" class="product-card-btn">Ver Producto</a>
+                    <a href="./product.html" class="product-card-btn">Ver Producto</a>
                 </div>
                 <div class="product-card">
-                    <img src="/img/freidora.jpg">
+                    <img src="./img/freidora.jpg">
                     <div class="product-card-name">Freidora de Aire Atma</div>
                     <div class="product-card-price">$258.000.-</div>
-                    <a href="/product.html" class="product-card-btn">Ver Producto</a>
+                    <a href="./product.html" class="product-card-btn">Ver Producto</a>
                 </div>
                 <div class="product-card">
-                    <img src="/img/lavarropas.jpg">
+                    <img src="./img/lavarropas.jpg">
                     <div class="product-card-name">Lavarropas Automático Philco</div>
                     <div class="product-card-price">$550.000.-</div>
-                    <a href="/product.html" class="product-card-btn">Ver Producto</a>
+                    <a href="./product.html" class="product-card-btn">Ver Producto</a>
                 </div>
                 <div class="product-card">
-                    <img src="/img/notebook.jpg">
+                    <img src="./img/notebook.jpg">
                     <div class="product-card-name">Notebook Celeron 14.1" 4GB 128 GB SSD Philco</div>
                     <div class="product-card-price">$1.258.000.-</div>
-                    <a href="/product.html" class="product-card-btn">Ver Producto</a>
+                    <a href="./product.html" class="product-card-btn">Ver Producto</a>
                 </div>
                 <div class="product-card">
-                    <img src="/img/play.jpg">
+                    <img src="./img/play.jpg">
                     <div class="product-card-name">Play station 5</div>
                     <div class="product-card-price">$1.600.000.-</div>
-                    <a href="/product.html" class="product-card-btn">Ver Producto</a>
+                    <a href="./product.html" class="product-card-btn">Ver Producto</a>
                 </div>
             </div>
         </section>
