--- a/product.html
+++ b/product.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerce</title>
-    <link rel="icon" href="/img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <!-- Header  -->
     <header>
         <div class="header-content">
             <div class="logo">E-Commerce</div>
-            <img class="hamburguer" src="/img/menu.png">
+            <img class="hamburguer" src="./img/menu.png">
             <nav class="header-content-nav">
                 <ul>
-                    <li><a href="/index.html">Inicio</a></li>
-                    <li><a href="/index.html">Productos</a></li>
-                    <li><a href="/contact.html">Contacto</a></li>
-                    <li><a href="/cart.html"><img src="/img/cart.png" alt="shopping cart" ></a></li>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="./index.html">Productos</a></li>
+                    <li><a href="./contact.html">Contacto</a></li>
+                    <li><a href="./cart.html"><img src="./img/cart.png" alt="shopping cart" ></a></li>
                 </ul>
             </nav>
         </div>
@@ -28,14 +28,14 @@
         <!-- Detalle del producto -->
         <section class="product-detail" >
             <div class="product-image">
-                <img src="/img/celular.jpg">
+                <img src="./img/celular.jpg">
             </div>
             <div class="product-info">
                 <div class="product-info-name">Celular Motorola G05 4GB 128GB</div>
                 <div class="product-info-price">$158.000.-</div>
                 <div class="product-info-description">Disfruta de un rendimiento excepcional con el Celular Motorola G05, que cuenta con 4GB de RAM y 128GB de almacenamiento interno. Perfecto para multitarea y almacenamiento de tus aplicaciones y archivos favoritos.</div>
             </div>
-            <a href="/cart.html" class="btn-product-buy">Agregar al carrito</a>
+            <a href="./cart.html" class="btn-product-buy">Agregar al carrito</a>
         </section>
      </main>
     <!-- Footer -->
