--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
     <header>
         <div class="header-content">
             <div class="logo">E-Commerce</div>
-            <img class="hamburguer" src="./img/menu.png">
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav class="header-content-nav-hamburger" id="header-content-nav-hamburger">
+                <div class="hamburger-menu-header">
+                    <button class="close-btn" id="close-btn">&times;</button>
+                </div>
+                <ul>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="#products">Productos</a></li>
+                    <li><a href="./contact.html">Contacto</a></li>
+                    <li><a href="./cart.html">Carrito</a></li>
+                </ul>
+            </nav>
             <nav class="header-content-nav">
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
