product-detail js

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
         </section>
      </main>
     <!-- Footer -->
-    <script src="./app.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/data.js"></script>
+    <script src="./js/product-detail.js"></script>
     <footer>
         <p>&copy; 2025 ISTEA - Programación Web.</p>
         <p>
