--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,26 @@
     <header>
         <div class="header-content">
             <div class="logo">E-Commerce</div>
-            <img class="hamburguer" src="./img/menu.png">
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav class="header-content-nav-hamburger" id="header-content-nav-hamburger">
+                <div class="hamburger-menu-header">
+                    <button class="close-btn" id="close-btn">&times;</button>
+                </div>
+                <ul>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="#products">Productos</a></li>
+                    <li><a href="./contact.html">Contacto</a></li>
+                    <li><a href="./cart.html">Carrito</a></li>
+                </ul>
+            </nav>
             <nav class="header-content-nav">
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./index.html">Productos</a></li>
+                    <li><a href="#products">Productos</a></li>
                     <li><a href="./contact.html">Contacto</a></li>
                     <li><a href="./cart.html"><img src="./img/cart.png" alt="shopping cart" ></a></li>
                 </ul>
@@ -109,6 +124,9 @@
          </section>
      </main>
     <!-- Footer -->
+    <script src="./js/index.js"></script>
+    <script src="./js/data.js"></script>
+    <script src="./js/product-detail.js"></script>
     <footer>
         <p>&copy; 2025 ISTEA - Programación Web.</p>
         <p>
