--- a/product.html
+++ b/product.html
@@ -12,11 +12,26 @@
     <header>
         <div class="header-content">
             <div class="logo">E-Commerce</div>
-            <img class="hamburguer" src="./img/menu.png">
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav class="header-content-nav-hamburger" id="header-content-nav-hamburger">
+                <div class="hamburger-menu-header">
+                    <button class="close-btn" id="close-btn">&times;</button>
+                </div>
+                <ul>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="#products">Productos</a></li>
+                    <li><a href="./contact.html">Contacto</a></li>
+                    <li><a href="./cart.html">Carrito</a></li>
+                </ul>
+            </nav>
             <nav class="header-content-nav">
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./index.html">Productos</a></li>
+                    <li><a href="#products">Productos</a></li>
                     <li><a href="./contact.html">Contacto</a></li>
                     <li><a href="./cart.html"><img src="./img/cart.png" alt="shopping cart" ></a></li>
                 </ul>
@@ -26,19 +41,14 @@
     <!-- Contenido principal -->
      <main class="container">
         <!-- Detalle del producto -->
-        <section class="product-detail" >
-            <div class="product-image">
-                <img src="./img/celular.jpg">
-            </div>
-            <div class="product-info">
-                <div class="product-info-name">Celular Motorola G05 4GB 128GB</div>
-                <div class="product-info-price">$158.000.-</div>
-                <div class="product-info-description">Disfruta de un rendimiento excepcional con el Celular Motorola G05, que cuenta con 4GB de RAM y 128GB de almacenamiento interno. Perfecto para multitarea y almacenamiento de tus aplicaciones y archivos favoritos.</div>
-            </div>
-            <a href="./cart.html" class="btn-product-buy">Agregar al carrito</a>
+        <section id="product-detail" class="product-detail">
+            <!-- Detalle renderizado con JS -->
         </section>
      </main>
     <!-- Footer -->
+    <script src="./js/index.js"></script>
+    <script src="./js/data.js"></script>
+    <script src="./js/product-detail.js"></script>
     <footer>
         <p>&copy; 2025 ISTEA - Programación Web.</p>
         <p>
